--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
