--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type":"module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
